Fix bug not autoplay video on Safari

--- a/src/assets/scss/core/layout/_header.scss
+++ b/src/assets/scss/core/layout/_header.scss
@@ -50,8 +50,9 @@
 }
 
 .site-header-inner {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   height: $header-height__mobile;
 }
